# rcpp-test

./: .travis.yml  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  clean.sh  configure  configure.win  mytest.R  run.bat  run.sh
R/: foo.R
src/: Makefile  foo.cpp
